# water-level-forecast

./: .gitignore  .pre-commit-config.yaml  README.md  playground.ipynb  pyproject.toml
src/: __init__.py
src/api/: __init__.py  base.py  client.py  dwd.py  pegeonline.py
src/data_pipelines/: __init__.py
tests/integration/: test_data_extractor.py
