[project]
name = "water-level-forecast"
version = "0.1.0"
description = "Water level forecasting system with DWD and Pegelonline data integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pydantic>=2.11.0",
]

[dependency-groups]
development = [
    "mypy>=1.17.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]
